--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,7 +96,7 @@ set(CLANG_PGO_USE "-fprofile-instr-use=${CLANG_PGO_USEPATH}")
 set(RESQL_LINK_LIBRARIES "")
 
 if (${PGO} MATCHES "generate")
-    MESSAGE("profile will be generated.")
+    message(STATUS "Profile will be generated.")
 
     if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
         target_compile_options(resql PRIVATE ${CLANG_PGO_GEN})
@@ -111,7 +111,7 @@ if (${PGO} MATCHES "generate")
     target_include_directories(resql-trainer PRIVATE ${CMAKE_SOURCE_DIR}/cresql)
     install(TARGETS resql-trainer RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
 elseif (${PGO} MATCHES "use")
-    MESSAGE("Profile will be used.")
+    message(STATUS "Profile will be used.")
 
     if ("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
         if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
@@ -127,13 +127,17 @@ elseif (${PGO} MATCHES "use")
         endif ()
 
         if (NOT CMD_ERROR EQUAL 0)
-            MESSAGE("llvm-profdata failed.")
+            message(STATUS "llvm-profdata failed.")
         else ()
             target_compile_options(resql PRIVATE ${CLANG_PGO_USE})
         endif ()
     else ()
         target_compile_options(resql PRIVATE ${GCC_PGO_USE})
-        compile_option(resql -fprofile-partial-training HAVE_PARTIAL)
+        check_c_compiler_flag(-fprofile-partial-training HAVE_PARTIAL)
+        if (HAVE_PARTIAL)
+            message(STATUS "defined -fprofile-partial-training")
+            compile_option(resql -fprofile-partial-training HAVE_PARTIAL)
+        endif()
     endif ()
 endif ()
 
