fixed compile option usage in cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,7 +136,7 @@ elseif (${PGO} MATCHES "use")
         check_c_compiler_flag(-fprofile-partial-training HAVE_PARTIAL)
         if (HAVE_PARTIAL)
             message(STATUS "defined -fprofile-partial-training")
-            compile_option(resql -fprofile-partial-training HAVE_PARTIAL)
+            target_compile_options(resql PRIVATE -fprofile-partial-training)
         endif()
     endif ()
 endif ()
