--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -134,6 +134,7 @@ resql_test(leader_test.c)
 resql_test(meta_test.c)
 resql_test(msg_test.c)
 resql_test(page_test.c)
+resql_test(remove_test.c)
 resql_test(restart_test.c)
 resql_test(session_test.c)
 resql_test(single_test.c)
