do not build 32 bit with clang as toolchain is provided by gcc, prevent mismatch

--- a/.github/workflows/.ubuntu.yml
+++ b/.github/workflows/.ubuntu.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler: [ gcc, clang ]
+        compiler: [ gcc ]
     steps:
       - uses: actions/checkout@v2.1.0
       - name: build
